# finflow

./: pyproject.toml
finflow/: __init__.py  getter.py  setter.py
finflow/utils/: __init__.py  exceptions.py  login.py  request_interface.py
finflow/utils/connections/: __init__.py  database.py  supa_client.py
finflow/utils/forecast/: __init__.py  direction.py  volatility.py
finflow/utils/market/: __init__.py  fundings.py  liquidation.py
finflow/utils/prices/: __init__.py  get_prices.py  set_prices.py
finflow/utils/user/: __init__.py  order_historical.py  portfolio.py
tests/: test_getter.py  test_login.py  test_setter.py  test_supaclient.py
